--- a/DeskAppLibrary/DeskAppLibrary.vcxproj
+++ b/DeskAppLibrary/DeskAppLibrary.vcxproj
@@ -20,7 +20,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="WinMain.cpp" />
+    <ClCompile Include="BaseWindow.cpp" />
+    <ClCompile Include="MainWin.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MainWin.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
