we are now DPI aware and some fun

--- a/DeskAppLibrary/DeskAppLibrary.vcxproj.filters
+++ b/DeskAppLibrary/DeskAppLibrary.vcxproj.filters
@@ -30,4 +30,9 @@
       <Filter>Üst Bilgi Dosyaları</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Xml Include="DPIAware.xml">
+      <Filter>Kaynak Dosyaları</Filter>
+    </Xml>
+  </ItemGroup>
 </Project>
