Manifest has been made and assert in Resize is givin error

--- a/DeskAppLibrary/DeskAppLibrary.vcxproj
+++ b/DeskAppLibrary/DeskAppLibrary.vcxproj
@@ -27,7 +27,7 @@
     <ClInclude Include="MainWin.h" />
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="DPIAware.xml" />
+    <Manifest Include="DPIAware.manifest" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -106,7 +106,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Manifest>
-      <AdditionalManifestFiles>DPIAware.xml</AdditionalManifestFiles>
+      <AdditionalManifestFiles>DPIAware.manifest</AdditionalManifestFiles>
     </Manifest>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -126,7 +126,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Manifest>
-      <AdditionalManifestFiles>DPIAware.xml</AdditionalManifestFiles>
+      <AdditionalManifestFiles>DPIAware.manifest</AdditionalManifestFiles>
     </Manifest>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -142,7 +142,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Manifest>
-      <AdditionalManifestFiles>DPIAware.xml</AdditionalManifestFiles>
+      <AdditionalManifestFiles>DPIAware.manifest</AdditionalManifestFiles>
     </Manifest>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -162,7 +162,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Manifest>
-      <AdditionalManifestFiles>DPIAware.xml</AdditionalManifestFiles>
+      <AdditionalManifestFiles>DPIAware.manifest</AdditionalManifestFiles>
     </Manifest>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
