Some bad code, Get Started has finished. I will start with a new project

--- a/DeskAppLibrary/DeskAppLibrary.vcxproj.filters
+++ b/DeskAppLibrary/DeskAppLibrary.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="MainWin.cpp">
       <Filter>Kaynak Dosyalar</Filter>
     </ClCompile>
+    <ClCompile Include="DPIScale.cpp">
+      <Filter>Kaynak Dosyalar</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainWin.h">
