--- a/DeskAppLibrary/DeskAppLibrary.vcxproj
+++ b/DeskAppLibrary/DeskAppLibrary.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DPIScale.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="BaseWindow.cpp" />
     <ClCompile Include="MainWin.cpp" />
